--- a/README.adoc
+++ b/README.adoc
@@ -12,10 +12,25 @@ include::https://raw.githubusercontent.com/spring-guides/getting-started-macros/
 
 include::https://raw.githubusercontent.com/spring-guides/getting-started-macros/main/how_to_complete_this_guide.adoc[]
 
+[[scratch]]
 == Starting with Spring Initializr
-Navigate to https://start.spring.io/[Spring Initializr].
-// dz todo - starting with initializr
 
+To manually initialize the project:
+
+. Navigate to https://start.spring.io.
+This service pulls in all the dependencies you need for an application and does most of the setup for you.
+. Choose either Gradle or Maven and the language you want to use. This guide assumes that you chose Java.
+. Choose Spring Boot 3.x
+. Choose at least Java 17 (minimum requirement for Spring Boot 3.x)
+. Click *Dependencies* and select *Spring for GraphQL* and *Spring Web*.
+. Click *Generate*.
+. Download the resulting ZIP file, which is an archive of a GraphQL application that is configured with your choices.
+
+NOTE: If your IDE has the Spring Initializr integration, you can complete this process from your IDE.
+
+NOTE: You can also fork the project from https://github.com/spring-guides/graphql-server[GitHub] and open it in your IDE or other editor.
+
+[[initial]]
 == A very short introduction to GraphQL
 
 GraphQL is a query language to retrieve data from a server.
