--- a/README.adoc
+++ b/README.adoc
@@ -1,6 +1,8 @@
 = Building a GraphQL service with Spring for GraphQL
 
-This guide walks you through the process of creating a GraphQL service in Java using https://docs.spring.io/spring-graphql/docs/current/reference/html/[Spring for GraphQL].
+https://docs.spring.io/spring-graphql/docs/current/reference/html/[Spring for GraphQL] provides support for Spring applications built on https://www.graphql-java.com/[GraphQL Java].
+
+This guide walks you through the process of creating a GraphQL service in Java using Spring for GraphQL.
 
 == What You Will Build
 You will build a service that will accept GraphQL requests at `http://localhost:8080/graphql`.
@@ -119,7 +121,7 @@ The main steps of creating a https://docs.spring.io/spring-graphql/docs/current/
 Our example app will be a simple API to get details for a specific book. It is not intended to be a comprehensive API.
 
 == Schema
-In your application you initialized earlier, create a directory `src/main/resources/graphql`.
+In your Spring for GraphQL service you initialized earlier, create a directory `src/main/resources/graphql`.
 
 Add a new file `schema.graphqls` to `src/main/resources/graphql` with the following content:
 
@@ -178,9 +180,9 @@ public class Book {
     }
 
     private static List<Book> books = Arrays.asList(
-            new Book("book-1", "Harry Potter and the Philosopher's Stone", 223, "author-1"),
-            new Book("book-2", "Moby Dick", 635, "author-2"),
-            new Book("book-3", "Interview with the vampire", 371, "author-3")
+            new Book("book-1", "Effective Java", 416, "author-1"),
+            new Book("book-2", "Hitchhiker's Guide to the Galaxy", 208, "author-2"),
+            new Book("book-3", "Down Under", 436, "author-3")
     );
 
     public static Book getById(String id) {
@@ -202,7 +204,6 @@ public class Book {
 Add the following to `bookDetails/Author.java`
 
 // dz todo: convert to a record
-// dz todo: change to different books - Effective Java, Down Under by Bill Bryson, Hitchhiker's Guide to the Galaxy
 [,java]
 ----
 public class Author {
@@ -218,9 +219,9 @@ public class Author {
     }
 
     private static List<Author> authors = Arrays.asList(
-            new Author("author-1", "Joanne", "Rowling"),
-            new Author("author-2", "Herman", "Melville"),
-            new Author("author-3", "Anne", "Rice")
+            new Author("author-1", "Joshua", "Bloch"),
+            new Author("author-2", "Douglas", "Adams"),
+            new Author("author-3", "Bill", "Bryson")
     );
 
     public static Author getById(String id) {
@@ -257,7 +258,7 @@ public class BookController {
 
 The `@QueryMapping` annotation binds this method to a query, a field under the Query type.
 The query field is then determined from the method name, `bookById`.
-It could also be declared on the annotation.
+The query field could also be declared on the annotation.
 Spring for GraphQL uses `RuntimeWiring.Builder` to register the handler method as a `graphql.schema.DataFetcher` for the query field `bookById`.
 
 In the GraphQL Java engine, `DataFetchingEnvironment` provides access to a map of field-specific argument values.
@@ -318,15 +319,12 @@ query bookDetails {
 You should see a response like this.
 image:/img/graphiQL.png[GraphQL response]
 
-We have built a GraphQL service and run our first query! With the help of Spring for GraphQL features, we were able to achieve this with only a few lines of code.
+Congratulations, you have built a GraphQL service and run your first query! With the help of Spring for GraphQL, you were able to achieve this with only a few lines of code.
 
 === Testing
 // dz todo: adding a few tests to verify this works
 
 See the https://docs.spring.io/spring-graphql/docs/current/reference/html/#testing[documentation] for more on testing in Spring for GraphQL.
-
-== Summary
-Congratulations! You have built a GraphQL service with Spring for GraphQL.
 
 == Further reading
 
